--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -2,7 +2,7 @@
 #root {
   /* background */
   --bg-primary: #fff2d8;       /* main bg */
-  --bg-secondary: #a2a378;     /* other bgs */
+  --bg-secondary: #b4b585;     /* other bgs */
   --bg-tertiary: #83764f;      /* cards bg */
 
   /* highlights */
@@ -10,3 +10,4 @@
   --highlight-2: #a0d8b3;      /* lines */
   --highlight-3: #e5f9db;      /* for anything else */
 }
+
