--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: #fff2d8;
+  background-color: #F1EFE9;
 }
 
 code {
