--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,13 +1,12 @@
 /* variables */
 #root {
   /* background */
-  --bg-primary: #fff2d8;       /* main bg */
-  --bg-secondary: #b4b585;     /* other bgs */
-  --bg-tertiary: #83764f;      /* cards bg */
+  --bg-primary: #ebe8e2; /* main bg */
+  --bg-secondary: #b4b585; /* other bgs */
+  --bg-tertiary: #83764f; /* cards bg */
 
   /* highlights */
-  --highlight-1: #113946;      /* buttons */
-  --highlight-2: #a0d8b3;      /* lines */
-  --highlight-3: #e5f9db;      /* for anything else */
+  --highlight-1: #113946; /* buttons */
+  --highlight-2: #a0d8b3; /* lines */
+  --highlight-3: #e5f9db; /* for anything else */
 }
-
